Project section rework applied to other projects, bugfixes, better responsiveness on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -96,6 +96,11 @@ body {
 	cursor: pointer;
 	transition: transform 0.5s;
 
+	@include respond-to(mobile) {
+		top: -35px;
+		right: 15px;
+	}
+
 	&:hover {
 		transform: scale(1.2);
 	}
@@ -114,6 +119,10 @@ body {
 	padding: 20px;
 	float: left;
 
+	@include respond-to(mobile) {
+		padding: 5px !important;
+	}
+
 	.modal-info {
 		background: $white;
 		border-radius: 4px;
@@ -130,6 +139,24 @@ body {
 			@include respond-to(laptop) {
 				width: 100%;
 				max-width: 100%;
+			}
+
+			@include respond-to(mobile) {
+				padding: 0 !important;
+			}
+
+			.container {
+				@include respond-to(mobile) {
+					padding: 0 !important;
+				}
+
+				.row {
+					.slider-parent {
+						@include respond-to(mobile) {
+							padding: 0 !important;
+						}
+					}
+				}
 			}
 		}
 
@@ -223,6 +250,18 @@ body {
 	}
 }
 
+#slider2 {
+	:first-child {
+		border: none !important;
+	}
+}
+
+#slider3 {
+	:first-child {
+		border: none !important;
+	}
+}
+
 #carousel img {
 	display: block;
 	opacity: .5;
@@ -237,6 +276,10 @@ body {
 .scroll {
 	overflow-y: scroll;
 	max-height: calc(100vh - 40px);
+
+	@include respond-to(mobile) {
+		max-height: calc(100vh - 10px);
+	}
 
 	&::-webkit-scrollbar-track {
 		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
